--- a/PHASE_1.ipynb
+++ b/PHASE_1.ipynb
@@ -677,7 +677,33 @@
     "\n",
     "Let’s take a quick tour through HTML so we know enough to scrape effectively. HTML consists of elements called tags. The most basic tag is the tag. This tag tells the web browser that everything inside of it is HTML. We can make a simple HTML document just using this tag:\n",
     "\n",
-    "Right inside an html tag, we put two other tags, the head tag, and the body tag. The main content of the web page goes into the body tag. The head tag contains data about the title of the page, and other information that generally isn’t useful in web scraping: We’ll now add our first content to the page, in the form of the p tag. The p tag defines a paragraph, and any text inside the tag is shown as a separate paragraph:\n",
+    "<html>\n",
+    "</html>\n",
+    "\n",
+    "Right inside an html tag, we put two other tags, the head tag, and the body tag. The main content of the web page goes into the body tag. The head tag contains data about the title of the page, and other information that generally isn’t useful in web scraping: \n",
+    "\n",
+    "<html>\n",
+    "    <head>\n",
+    "    </head>\n",
+    "    <body>\n",
+    "    </body>\n",
+    "</html>\n",
+    "\n",
+    "We’ll now add our first content to the page, in the form of the p tag. The p tag defines a paragraph, and any text inside the tag is shown as a separate paragraph:\n",
+    "\n",
+    "<html>\n",
+    "    <head>\n",
+    "    </head>\n",
+    "    <body>\n",
+    "          <p>\n",
+    "            Here's a paragraph of text!\n",
+    "        </p>\n",
+    "        <p>\n",
+    "            Here's a second paragraph of text!\n",
+    "        </p>\n",
+    "    </body>\n",
+    "</html>\n",
+    "\n",
     "Here's a paragraph of text!\n",
     "\n",
     "Here's a second paragraph of text!\n",
@@ -689,68 +715,152 @@
     "\n",
     "child — a child is a tag inside another tag. So the two p tags above are both children of the body tag. parent — a parent is the tag another tag is inside. Above, the html tag is the parent of the body tag. sibiling — a sibiling is a tag that is nested inside the same parent as another tag. For example, head and body are siblings, since they’re both inside html. Both p tags are siblings, since they’re both inside body. We can also add properties to HTML tags that change their behavior:\n",
     "\n",
-    "Here's a paragraph of text! Learn Data Science Online\n",
+    "<html>\n",
+    "  <head></head>\n",
+    "  <body>\n",
+    "    <p>\n",
+    "      Here's a paragraph of text!\n",
+    "      <a href=\"https://www.dataquest.io\">Learn Data Science Online</a>\n",
+    "    </p>\n",
+    "    <p>\n",
+    "      Here's a second paragraph of text!\n",
+    "      <a href=\"https://www.python.org\">Python</a>        \n",
+    "    </p>\n",
+    "  </body>\n",
+    "</html>\n",
     "\n",
-    "Here's a second paragraph of text! Python\n",
-    "\n",
-    "Here's a paragraph of text! Learn Data Science Online\n",
-    "Here's a second paragraph of text! Python\n",
     "\n",
     "In the above example, we added two a tags. a tags are links, and tell the browser to render a link to another web page. The href property of the tag determines where the link goes.\n",
     "\n",
     "a and p are extremely common html tags. Here are a few others:\n",
     "\n",
-    "div: indicates a division, or area, of the page. b: bolds any text inside. i: italicizes any text inside. u: underlines any text inside. table: creates a table. form: creates an input form. For a full list of tags, look here.\n",
+    "div: indicates a division, or area, of the page.\n",
+    "b: bolds any text inside.\n",
+    "i: italicizes any text inside.\n",
+    "u: underlines any text inside.\n",
+    "table: creates a table.\n",
+    "form: creates an input form.\n",
+    "\n",
     "\n",
     "bold italics underlining There are two special properties that give HTML elements names, and make them easier to interact with when we’re scraping: class and id.\n",
     "\n",
     "One element can have multiple classes, and a class can be shared between elements. Each element can only have one id, and an id can only be used once on a page. Classes and ids are optional, and not all elements will have them. We can add classes and ids to our example:\n",
     "\n",
-    "Here's a paragraph of text! Learn Data Science Online\n",
+    "<html>\n",
+    "    <head>\n",
+    "    </head>\n",
+    "    <body>\n",
+    "        <p class=\"bold-paragraph\">\n",
+    "            Here's a paragraph of text!\n",
+    "            <a href=\"https://www.dataquest.io\" id=\"learn-link\">Learn Data Science Online</a>\n",
+    "        </p>\n",
+    "        <p class=\"bold-paragraph extra-large\">\n",
+    "            Here's a second paragraph of text!\n",
+    "            <a href=\"https://www.python.org\" class=\"extra-large\">Python</a>\n",
+    "        </p>\n",
+    "    </body>\n",
+    "</html>\n",
     "\n",
-    "Here's a second paragraph of text! Python\n",
-    "\n",
-    "Here's a paragraph of text! Learn Data Science Online\n",
-    "Here's a second paragraph of text! Python\n",
-    "\n",
-    "Let's take a look at a sample web page from our local computer Open up example.com in your browser. Open up the inspector Mac: cmd+option+c Windows: ctrl+shift+c Click on the elements tab, and click on an element\n",
     "\n",
     "# Webscraping with Python\n",
     "\n",
-    "import requests from bs4 import BeautifulSoup import pandas as pd\n",
+    "import requests \n",
+    "from bs4 import BeautifulSoup \n",
+    "import pandas as pd\n",
+    "\n",
     "The requests library The first thing we’ll need to do to scrape a web page is to download the page. We can download pages using the Python requests library (similar to interacting with APIs!).\n",
     "\n",
-    "req = requests.get(\"http://dataquestio.github.io/web-scraping-pages/simple.html\") After running our request, we get a Response object. This object has a status_code property, which indicates if the page was downloaded successfully:\n",
+    "req = requests.get(\"http://dataquestio.github.io/web-scraping-pages/simple.html\") \n",
     "\n",
-    "req.status_code We can print out the HTML content of the page using the content property:\n",
+    "After running our request, we get a Response object. This object has a status_code property, which indicates if the page was downloaded successfully:\n",
     "\n",
-    "req.content Parsing a page with BeautifulSoup We can use the BeautifulSoup library to parse this document, and extract the text from the\n",
+    "req.status_code \n",
     "\n",
-    "tag.\n",
+    "We can print out the HTML content of the page using the content property:\n",
     "\n",
-    "soup = BeautifulSoup(req.content) list(soup.children) print(soup.prettify()) As all the tags are nested, we can move through the structure one level at a time. We can first select all the elements at the top level of the page using the children property of soup.\n",
+    "req.content \n",
     "\n",
-    "list(soup.children) [type(item) for item in list(soup.children)] The Tag object allows us to navigate through an HTML document, and extract other tags and text. You can learn more about the various BeautifulSoup objects here.\n",
+    "## Parsing a page with BeautifulSoup\n",
+    "We can use the BeautifulSoup library to parse this document, and extract the text from the <p> tag.\n",
+    "\n",
+    "soup = BeautifulSoup(req.content) \n",
+    "list(soup.children) \n",
+    "print(soup.prettify()) \n",
+    "    \n",
+    "As all the tags are nested, we can move through the structure one level at a time. We can first select all the elements at the top level of the page using the children property of soup.\n",
+    "\n",
+    "list(soup.children) \n",
+    "[type(item) for item in list(soup.children)]\n",
+    "    \n",
+    "The Tag object allows us to navigate through an HTML document, and extract other tags and text. You can learn more about the various BeautifulSoup objects here.\n",
     "\n",
     "We can now select the html tag and its children by taking the second item in the list:\n",
     "\n",
-    "html = list(soup.children)[1] html Each item in the list returned by the children property is also a BeautifulSoup object, so we can also call the children method on html.\n",
+    "html = list(soup.children)[1] \n",
+    "html \n",
+    "    \n",
+    "Each item in the list returned by the children property is also a BeautifulSoup object, so we can also call the children method on html.\n",
     "\n",
     "Now we can find the children inside the html tag:\n",
     "\n",
-    "list(html.children) As you can see above, there are two tags here, head, and body. We want to extract the text inside the p tag, so we’ll dive into the body:\n",
+    "list(html.children) \n",
+    "    \n",
+    "As you can see above, there are two tags here, head, and body. We want to extract the text inside the p tag, so we’ll dive into the body:\n",
     "\n",
-    "body = list(html.children)[3] We can now isolate the p tag:\n",
+    "body = list(html.children)[3]\n",
+    "    \n",
+    "We can now isolate the p tag:\n",
     "\n",
-    "p = list(body.children)[1] Once we’ve isolated the tag, we can use the get_text method to extract all of the text inside the tag:\n",
+    "p = list(body.children)[1] \n",
+    "    \n",
+    "Once we’ve isolated the tag, we can use the get_text method to extract all of the text inside the tag:\n",
     "\n",
-    "p.get_text Finding all instances of a tag at once If we want to extract a single tag, we can instead use the find_all method, which will find all the instances of a tag on a page.\n",
+    "p.get_text \n",
+    "    \n",
+    "## Finding all instances of a tag at once \n",
+    "    \n",
+    "If we want to extract a single tag, we can instead use the find_all method, which will find all the instances of a tag on a page.\n",
     "\n",
-    "soup = BeautifulSoup(req.content) soup.find_all('p') Note that find_all returns a list, so we’ll have to loop through, or use list indexing, it to extract text:\n",
+    "soup = BeautifulSoup(req.content) \n",
+    "soup.find_all('p') \n",
     "\n",
-    "soup.find_all('p')[0].get_text() If you instead only want to find the first instance of a tag, you can use the find method, which will return a single BeautifulSoup object:\n",
+    "Note that find_all returns a list, so we’ll have to loop through, or use list indexing, it to extract text:\n",
     "\n",
-    "soup.find('p') Searching for tags by class and id We introduced classes and ids earlier, but it probably wasn’t clear why they were useful. Classes and ids are used by CSS to determine which HTML elements to apply certain styles to. We can also use them when scraping to specify specific elements we want to scrape. Let's look at the following page:\n",
+    "soup.find_all('p')[0].get_text() \n",
+    "    \n",
+    "If you instead only want to find the first instance of a tag, you can use the find method, which will return a single BeautifulSoup object:\n",
+    "\n",
+    "soup.find('p') \n",
+    "    \n",
+    "## Searching for tags by class and id\n",
+    "    \n",
+    "We introduced classes and ids earlier, but it probably wasn’t clear why they were useful. Classes and ids are used by CSS to determine which HTML elements to apply certain styles to. We can also use them when scraping to specify specific elements we want to scrape. Let's look at the following page:\n",
+    "    \n",
+    "    <html>\n",
+    "    <head>\n",
+    "        <title>A simple example page</title>\n",
+    "    </head>\n",
+    "    <body>\n",
+    "        <div>\n",
+    "            <p class=\"inner-text first-item\" id=\"first\">\n",
+    "                First paragraph.\n",
+    "            </p>\n",
+    "            <p class=\"inner-text\">\n",
+    "                Second paragraph.\n",
+    "            </p>\n",
+    "        </div>\n",
+    "        <p class=\"outer-text first-item\" id=\"second\">\n",
+    "            <b>\n",
+    "                First outer paragraph.\n",
+    "            </b>\n",
+    "        </p>\n",
+    "        <p class=\"outer-text\">\n",
+    "            <b>\n",
+    "                Second outer paragraph.\n",
+    "            </b>\n",
+    "        </p>\n",
+    "    </body>\n",
+    "</html>\n",
     "\n",
     "First paragraph.\n",
     "\n",
@@ -760,18 +870,61 @@
     "\n",
     "Second outer paragraph.\n",
     "\n",
-    "page = requests.get(\"http://dataquestio.github.io/web-scraping-pages/ids_and_classes.html\") soup = BeautifulSoup(page.content) soup Now, we can use the find_all method to search for items by class or by id. In the below example, we’ll search for any p tag that has the class outer-text:\n",
-    "soup.find_all('p', class_='outer-text') In the below example, we’ll look for any tag that has the class outer-text:\n",
+    "page = requests.get(\"http://dataquestio.github.io/web-scraping-pages/ids_and_classes.html\") \n",
+    "soup = BeautifulSoup(page.content)\n",
+    "soup \n",
+    "    \n",
+    "Now, we can use the find_all method to search for items by class or by id. In the below example, we’ll search for any p tag that has the class outer-text:\n",
+    "\n",
+    "soup.find_all('p', class_='outer-text') \n",
+    "    \n",
+    "In the below example, we’ll look for any tag that has the class outer-text:\n",
     "\n",
     "soup.find_all(class_=\"outer-text\")[0] We can also search for elements by id:\n",
     "\n",
-    "soup.find_all(id=\"first\") More sophisticated webpages url = 'https://forecast.weather.gov/MapClick.php?lat=41.8843&lon=-87.6324#.XdPlJUVKg6g' request = requests.get(url) soup = BeautifulSoup(request.content) times = soup.find_all(class_='period-name') times descs = soup.find_all(class_='short-desc') descs together = [(entry[0].text, entry[1].text) for entry in zip(times, descs)] together Pulling in a Table In general you'll need to examine the html code so that you can tell the BeautifulSoup parser what to look for!\n",
+    "soup.find_all(id=\"first\") \n",
+    "    \n",
+    "    \n",
+    "## More sophisticated webpages \n",
+    "    \n",
+    "url = 'https://forecast.weather.gov/MapClick.php?lat=41.8843&lon=-87.6324#.XdPlJUVKg6g' \n",
+    "request = requests.get(url) \n",
+    "soup = BeautifulSoup(request.content) \n",
+    "    \n",
+    "times = soup.find_all(class_='period-name') \n",
+    "times \n",
+    "    \n",
+    "descs = soup.find_all(class_='short-desc') \n",
+    "descs \n",
+    "    \n",
+    "together = [(entry[0].text, entry[1].text) for entry in zip(times, descs)] \n",
+    "together\n",
+    "   \n",
+    "Pulling in a Table In general you'll need to examine the html code so that you can tell the BeautifulSoup parser what to look for!\n",
     "\n",
     "url = 'https://www.pro-football-reference.com/'\n",
     "\n",
-    "res = requests.get(url) soup = BeautifulSoup(res.content) teams = [] table = soup.find('table', {'id': 'AFC'})\n",
+    "res = requests.get(url) \n",
+    "soup = BeautifulSoup(res.content) \n",
     "\n",
-    "for row in table.find('tbody').find_all('tr'): try: team = {'name': row.find('th', {'data-stat': 'team'}).text, 'wins': row.find('td', {'data-stat': 'wins'}).text, 'losses': row.find('td', {'data-stat': 'losses'}).text, 'ties': row.find('td', {'data-stat': 'ties'}).text} teams.append(team) except: pass teams Combining our data into a Pandas DataFrame We can now combine the data into a Pandas DataFrame and analyze it.\n",
+    "teams = [] \n",
+    "table = soup.find('table', {'id': 'AFC'})\n",
+    "\n",
+    "for row in table.find('tbody').find_all('tr'): \n",
+    "    try: \n",
+    "        team = {'name': row.find('th', {'data-stat': 'team'}).text, \n",
+    "                'wins': row.find('td', {'data-stat': 'wins'}).text, \n",
+    "                'losses': row.find('td', {'data-stat': 'losses'}).text, \n",
+    "                'ties': row.find('td', {'data-stat': 'ties'}).text}\n",
+    "        teams.append(team) \n",
+    "    except: \n",
+    "    pass \n",
+    "    \n",
+    "teams\n",
+    "    \n",
+    "## Combining our data into a Pandas DataFrame \n",
+    "    \n",
+    "We can now combine the data into a Pandas DataFrame and analyze it.\n",
     "\n",
     "In order to do this, we’ll call the DataFrame class, and pass in each list of items that we have. We pass them in as part of a dictionary. Each dictionary key will become a column in the DataFrame, and each list will become the values in the column:\n",
     "\n",
